tests/ui/take_required.stderr
Error [E0201]: `consume` needs `take` here — this value can't be copied
  --> tests/ui/take_required.lex:11:13
    |
 11 |     consume(n);
    |             ^
 Why: parameter `1` takes ownership; passing `n` without `take` would have to copy it, but this type can't be copied
 Fix: write `take n` to transfer ownership
